fixed shooping list complete

--- a/shopping-list/index.html
+++ b/shopping-list/index.html
@@ -46,7 +46,7 @@
 				/>
 			</div>
 
-			<ul id="	" class="items">
+			<ul id="item-list" class="items">
 				<!-- <li>
 					Apples
 					<button class="remove-item btn-link text-red">
